[workspace]
resolver = "2"
members = [
  "oracle",
  "runtime",
  "runtime/client",
  "vault",
  "bitcoin",
  "faucet",
  "service",
  "runner"
]

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
frame-executive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
frame-support = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
frame-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-balances = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-collective = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-identity = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-membership = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-multisig = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-society = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-sudo = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-treasury = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
pallet-utility = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-client-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-client-db = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-executor = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-executor-common = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-finality-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-informant = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-network = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-service = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-telemetry = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sc-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-blockchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-consensus-vrf = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-externalities = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-finality-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-inherents = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-io = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-keyring = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-serializer = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-staking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-std = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-storage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-trie = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-version = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.24" }

[patch."https://github.com/paritytech/polkadot"]
pallet-xcm = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.24" }
polkadot-core-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.24" }
xcm = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.24" }
xcm-builder = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.24" }
xcm-executor = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.24" }
polkadot-parachain = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.24" }

[patch."https://github.com/paritytech/cumulus"]
cumulus-primitives-core = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.24" }