[package]
name = "bitcoin"
version = "1.1.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"

[features]
default = []
regtest-manual-mining = []
cli = ["clap"]
uses-bitcoind = []
light-client = []

[dependencies]
thiserror = "1.0"
bitcoincore-rpc = { git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc", rev = "bde02d7fbf031df7d3a49946ec0e7f1abde34e58" }
hex = "0.4.2"
async-trait = "0.1.40"
tokio = { version = "1.0", features = ["full"] }
backoff = { version = "0.3.0", features = ["tokio"] }
clap = { version = "4.0.17", features = ["derive", "std", "env"], optional = true }
num = "0.2"
num-traits = "0.2"
num-derive = "0.3"
futures = "0.3.5"
log = "0.4.0"
hyper = "0.10"
esplora-btc-api = "1.0.3"
sha2 = "0.8.2"
cfg-if = "1.0"

reqwest = "0.11.11"
url = "2.2.2"

serde = "1.0.139"
serde_json = "1.0.82"

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[dev-dependencies]
mockall = "0.8.1"
regex = "1.4.3"
rand = "0.7"
