[package]
name = "faucet"
version = "0.6.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"
description = "DOT faucet for enabling users to test PolkaBTC."

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
clap = "3.0.0-beta.2"
chrono = "0.4.19"
tokio = { version = "0.2.22", features = ["full"] }
thiserror = "1.0"
jsonrpc-http-server = "17.0.0"
parity-scale-codec = "2.0.0"
serde_json = "1.0.57"
serde = "1.0.116"
hex = "0.4.2"
kv = { version = "0.22.0", features = ["json-value"] }
async-trait = "0.1.40"
futures = "0.3.5"
git-version = "0.3.4"

# Workspace dependencies
runtime = { path = "../runtime" }
service = { path = "../service" }

[dev-dependencies]

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils"] }

# Substrate dependencies
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
