[package]
name = "faucet"
version = "1.1.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"
description = "Collateral faucet for the BTC Parachain."

[features]
standalone-metadata = ["runtime/standalone-metadata"]
parachain-metadata-interlay = ["runtime/parachain-metadata-interlay"]
parachain-metadata-kintsugi = ["runtime/parachain-metadata-kintsugi"]
parachain-metadata-testnet = ["runtime/parachain-metadata-testnet"]

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
clap = "3.1"
chrono = "0.4.19"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
jsonrpc-http-server = "18.0.0"
parity-scale-codec = "3.0.0"
serde_json = "1.0.71"
serde = "1.0.136"
hex = "0.4.2"
kv = { version = "0.22.0", features = ["json-value"] }
async-trait = "0.1.40"
futures = "0.3.5"
git-version = "0.3.4"

# Workspace dependencies
runtime = { path = "../runtime" }
service = { path = "../service" }

[dev-dependencies]

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils"] }

# Substrate dependencies
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
