[package]
name = "faucet"
version = "1.1.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"
description = "Collateral faucet for the BTC Parachain."

[lib]
name = "shared"
path = "src/lib.rs"

[features]
parachain-metadata-interlay = ["runtime/parachain-metadata-interlay"]
parachain-metadata-kintsugi = ["runtime/parachain-metadata-kintsugi"]

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
clap = { version = "4.0.17", features = ["derive"]}
chrono = "0.4.22"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
jsonrpc-http-server = "18.0.0"
parity-scale-codec = "3.0.0"
serde_json = "1.0.71"
serde = "1.0.136"
hex = "0.4.2"
kv = { version = "0.22.0", features = ["json-value"] }
async-trait = "0.1.40"
futures = "0.3.5"
git-version = "0.3.4"
lazy_static = "1.4.0"
tracing = { version = "0.1", features = ["log"] }

reqwest = { version = "0.11.11", features = ["json"] }
url = "2.2.2"

# Workspace dependencies
runtime = { path = "../runtime" }

[dev-dependencies]
serial_test = "0.9.0"

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils"] }

# Substrate dependencies
sp-keyring = "24.0.0"
