[package]
name = "oracle"
version = "1.1.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"
description = "Liveness service to update the exchange rate periodically."

[features]
parachain-metadata-interlay = ["runtime/parachain-metadata-interlay"]
parachain-metadata-kintsugi = ["runtime/parachain-metadata-kintsugi"]
parachain-metadata-interlay-testnet = ["runtime/parachain-metadata-interlay-testnet"]
parachain-metadata-kintsugi-testnet = ["runtime/parachain-metadata-kintsugi-testnet"]

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
clap = "3.1"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
thiserror = "1.0"
reqwest = { version = "0.11.4", features = ["json"] }
backoff = { version = "0.3.0", features = ["tokio"] }
git-version = "0.3.4"
futures = "0.3.5"
async-trait = "0.1.40"
statrs = "0.15"
serde_json = "1.0"

# Workspace dependencies
runtime = { path = "../runtime" }

[dev-dependencies]

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils"] }
