[package]
name = "oracle"
version = "1.1.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"
description = "Liveness service to update the exchange rate periodically."

[features]
parachain-metadata-interlay = ["runtime/parachain-metadata-interlay"]
parachain-metadata-kintsugi = ["runtime/parachain-metadata-kintsugi"]

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
clap = { version = "4.0.17", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
chrono = "0.4.22"
thiserror = "1.0"
reqwest = { version = "0.11.4", features = ["json"] }
backoff = { version = "0.3.0", features = ["tokio"] }
git-version = "0.3.4"
futures = "0.3.5"
async-trait = "0.1.40"
statrs = "0.16"
serde_json = "1.0"
serde = "1.0"

# Workspace dependencies
runtime = { path = "../runtime" }