[package]
name = "runner"
version = "0.0.1"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"
description = "The Runner runs and auto-updates interbtc clients (vault, oracle, faucet) across multiple networks (Interlay, Kintsugi, testnets)."

[dependencies]
clap = { version = "4.0.17", features = ["derive"]}
hex = "0.4.3"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
thiserror = "1.0.0"
log = "0.4.0"
env_logger = "0.7.1"
reqwest = "0.11.11"
# reuse version of `url` depended on by `reqwest`
url = "2.2.2"
nix = "0.24.2"
async-trait = "0.1.40"
bytes = "1.1.0"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3.21"
backoff = { version = "0.3.0", features = ["tokio"] }
subxt = { version = "0.29.0", default_features = false,  features = ["jsonrpsee-ws"] }
sha2 = "0.8.2"

# Substrate dependencies
sp-core = { version = "21.0.0", default-features = false }

[dev-dependencies]
sysinfo = "0.25.1"
tempdir = "0.3.7"
mockall = "0.8.1"
