[package]
name = "runtime"
version = "1.1.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"

[features]
default = []
testing-utils = [
    "tempdir",
    "interbtc",
    "interbtc-runtime",
    "rand",
    "subxt-client",
]
parachain-metadata-interlay = []
parachain-metadata-kintsugi = []
parachain-metadata-interlay-testnet = []
parachain-metadata-kintsugi-testnet = []

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full"] }
async-trait = "0.1.40"
thiserror = "1.0"
serde_json = "1.0.71"
tokio = { version = "1.0", features = ["full"] }
backoff = { version = "0.3.0", features = ["tokio"] }
futures = "0.3.5"
clap = { version = "4.0.17", features = ["derive"]}
log = "0.4.0"
url = "2"
cfg-if = "1.0"
prometheus = { version = "0.12.0", features = ["process"] }
lazy_static = "1.4.0"

# Substrate dependencies
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
# needs to agree with subxt's version
sp-keyring = { version = "7.0.0", default_features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }

# Subxt dependencies
subxt = "0.25.0"
subxt-client = { path = "./client", optional = true }
jsonrpsee = { version = "0.16.1", features = ["async-client", "client-ws-transport", "macros", "jsonrpsee-types", "client", "jsonrpsee-ws-client", "jsonrpsee-client-transport"] }

bitcoin = { path = "../bitcoin" }

# Dependencies for the testing utils for integration tests
tempdir = { version = "0.3.7", optional = true }
interbtc = { package = "interbtc-parachain", git = "https://github.com/interlay/interbtc", rev = "2e1f99f19fa6b7c76a8751306921f6fb0590c0e2", optional = true }
interbtc-runtime = { package = "testnet-kintsugi-runtime-parachain", git = "https://github.com/interlay/interbtc", rev = "2e1f99f19fa6b7c76a8751306921f6fb0590c0e2", optional = true }
rand = { version = "0.7", optional = true }

[dependencies.primitives]
git = "https://github.com/interlay/interbtc"
rev = "2e1f99f19fa6b7c76a8751306921f6fb0590c0e2"
package = "interbtc-primitives"

[dependencies.module-bitcoin]
git = "https://github.com/interlay/interbtc"
rev = "2e1f99f19fa6b7c76a8751306921f6fb0590c0e2"
package = "bitcoin"

[dependencies.module-btc-relay]
git = "https://github.com/interlay/interbtc"
rev = "2e1f99f19fa6b7c76a8751306921f6fb0590c0e2"
package = "btc-relay"

[dependencies.module-oracle-rpc-runtime-api]
git = "https://github.com/interlay/interbtc"
rev = "2e1f99f19fa6b7c76a8751306921f6fb0590c0e2"
package = "oracle-rpc-runtime-api"

[dev-dependencies]
runtime = { path = ".", features = ["testing-utils"] }
tempdir = "0.3.7"
env_logger = "0.8.3"