[package]
name = "runtime"
version = "1.1.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"

[features]
default = []
testing-utils = ["tempdir", "rand", "frame-support"]
parachain-metadata-interlay = []
parachain-metadata-kintsugi = []

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
    "full",
] }
async-trait = "0.1.40"
thiserror = "1.0"
serde_json = "1.0.71"
tokio = { version = "1.0", features = ["full"] }
backoff = { version = "0.3.0", features = ["tokio"] }
futures = "0.3.5"
clap = { version = "4.0.17", features = ["derive"] }
log = "0.4.0"
url = "2"
cfg-if = "1.0"
prometheus = { version = "0.12.0", features = ["process"] }
lazy_static = "1.4.0"
scale-decode = { version = "0.7.0", features = ["derive"] }
scale-encode = { version = "0.3.0", features = ["derive"] }

# Substrate dependencies
sp-core = { version = "21.0.0", default-features = false }
sp-runtime = "24.0.0"
sp-keyring = "24.0.0"
frame-support = { version = "21.0.0", optional = true }

# Subxt dependencies
subxt = { version = "0.29.0", default_features = false, features = [
    "jsonrpsee-ws",
] }
jsonrpsee = { version = "0.16", features = [
    "async-client",
    "client-ws-transport",
    "macros",
    "jsonrpsee-types",
    "client",
    "jsonrpsee-ws-client",
    "jsonrpsee-client-transport",
] }

bitcoin = { path = "../bitcoin" }

# Dependencies for the testing utils for integration tests
tempdir = { version = "0.3.7", optional = true }
rand = { version = "0.7", optional = true }

[dependencies.primitives]
git = "https://github.com/interlay/interbtc"
rev = "ab4136b"
package = "interbtc-primitives"
default_features = false
# NOTE: sp-runtime still in lockfile but not used
# https://github.com/rust-lang/cargo/issues/10801
features = ["std"]

[dependencies.module-bitcoin]
git = "https://github.com/interlay/interbtc"
rev = "ab4136b"
package = "bitcoin"
default_features = false
features = ["std", "parser"]

[dev-dependencies]
runtime = { path = ".", features = ["testing-utils"] }
tempdir = "0.3.7"
env_logger = "0.8.3"
serial_test = "0.9.0"
