[package]
name = "service"
version = "1.1.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"

[dependencies]
async-trait = "0.1.40"
futures = "0.3.5"
clap = { version = "4.0.17", features = ["derive"]}
thiserror = "1.0"

tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14.27" }
hyper-tls = "0.5.0"
warp = "0.3.2"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.71"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter", "fmt"] }
tracing-futures = { version = "0.2.5" }

governor = "0.5.0"
nonzero_ext = "0.3.0"

# Workspace dependencies
bitcoin = { path = "../bitcoin", features = ["cli"] }
runtime = { path = "../runtime" }
