[package]
name = "staked-relayer"
version = "0.2.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
parity-scale-codec = "1.3.6"
tokio = { version = "0.2.22", features = ["full"] }
hex = "0.4.2"
thiserror = "1.0"
futures = "0.3.5"
clap = "3.0.0-beta.2"
async-trait = "0.1.40"
serde = "1.0.116"
relayer-core = { git = "https://gitlab.com/interlay/relayer-core", rev = "49deea6c1219d3a0e682e35444a08055a238fed7" }
runtime = { path = "../runtime" }
bitcoin = { path = "../bitcoin", features = ["cli"] }
jsonrpc-http-server = "15.1.0"
backoff = { version = "0.2.1", features = ["tokio"] }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[dev-dependencies]
mockall = "0.8.1"
