[package]
name = "staked-relayer"
version = "0.5.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
parity-scale-codec = "2.0.0"
tokio = { version = "0.2.22", features = ["full"] }
backoff = { version = "0.2.1", features = ["tokio"] }
hex = "0.4.2"
thiserror = "1.0"
futures = "0.3.5"
clap = "3.0.0-beta.2"
async-trait = "0.1.40"
serde = "1.0.116"

jsonrpc-http-server = "17.0.0"
jsonrpc-core-client = { version = "17.0.0", features = ["http", "tls"] }

# Workspace dependencies
bitcoin = { path = "../bitcoin", features = ["cli"] }
runtime = { path = "../runtime" }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[dev-dependencies]
mockall = "0.8.1"

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils"] }
