[package]
name = "staked-relayer"
version = "0.6.0"
authors = ["Interlay <contact@interlay.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = "2.0.0"
tokio = { version = "0.2.22", features = ["full"] }
hex = "0.4.2"
thiserror = "1.0"
futures = "0.3.5"
clap = "3.0.0-beta.2"
async-trait = "0.1.40"
serde = "1.0.116"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter", "fmt"] }
tracing-futures = { version = "0.2.5" }

jsonrpc-core = "17.0.0"
jsonrpc-core-client = { version = "17.0.0", features = ["http", "tls"] }

# Workspace dependencies
bitcoin = { path = "../bitcoin", features = ["cli"] }
runtime = { path = "../runtime" }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[dev-dependencies]
mockall = "0.8.1"

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils"] }
