[package]
name = "testdata-gen"
version = "0.5.0"
authors = ["Interlay <dev@interlay.io>"]
edition = "2018"

[features]
default = ["bitcoin/regtest-mine-on-tx"]

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
parity-scale-codec = "2.0.0"
thiserror = "1.0"
clap = "3.0.0-beta.2"
log = "0.4.0"
env_logger = "0.7.1"
hex = "0.4.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.59"
reqwest = {version = "0.10.9", features = ["json"] }
jsonrpc-core = "17.0.0"
futures = "0.3.5"

# Workspace dependencies
bitcoin = { path = "../bitcoin", features = ["cli"] }
runtime = { path = "../runtime" }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
